--- a/2018/finat-poster/finat-poster.tex
+++ b/2018/finat-poster/finat-poster.tex
@@ -334,7 +334,7 @@ BoldItalicFont = *-Medium Italic,]{FiraSans}
     for example,
     $\left(\bigotimes_i A_i\right)^{-1} = \bigotimes_i A_i^{-1}$.
     \vspace{-\baselineskip}
-    \subsection*{Vectorisation {\itshape\&} performance}
+    \subsection*{Vectorisation and performance}
     \vspace{-0.35\baselineskip}
     Work in progress cross-element vectorisation schemes via
     \texttt{loo.py}.  Have low-complexity algorithms, need to do
